--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -2,11 +2,8 @@
   display: block;
   width: 250px;
   height: auto;
-
   margin: 20px auto;
-
   padding: 10px;
-
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
@@ -18,4 +15,49 @@
   height: auto;
   border-radius: 50%;
   background-color: rgba(81, 255, 0, 0.151);
+}
+
+.description {
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.name {
+  composes:description;
+  font-size: 24px;
+  font-weight: 900;
+}
+
+.tag, .location {
+  composes:description;
+  font-size: 15px;
+  font-weight: 600;
+  color: gray;
+}
+
+.stats {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-around;
+  background-color: rgb(206, 206, 206);
+  border-radius: 5px; 
+  text-align: center;
+}
+
+.statsitem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: space-around;
+}
+
+.label {
+  font-weight: 600;
+}
+.quantity {
+  font-weight: 400;
+  color: rgb(122, 121, 121);
 }
